change_log.txt
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2008-Mar-3  fwb
  	Ref Desig, value location move with symbol
	netlist improved
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2008-Feb-13 fwb
	Reference and value move with Instance
	added symbol text
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2008-Feb-10 fwb
 	Improved Instance reference, value positions
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2008-Feb-7  fwb
	1) OrCad version 10 doesn't xmit PIN_32_NUMBER_32_IS_32_VISIBLE
	   so for now all pins are visable
	2) Verion 10 uses portInstance to display PIN name/number but
	the coordinates are messed and without 1) no pin hotspots are shown
	3) added PCB_FOOTPRINT Instance property
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2008-Feb-6  fwb
	improved text scaling
 	automatically compute pin lenght and orientation
	Instances were getting confused with CellDefs
	Circles & Rectangles seem to be correct now
	Design can now include CellDefs
	e2sch works with OrCad version 9 , EDIF from ver 10 has problems
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-dec-3  fwb
	demote symbols (*XTIE* or *JUNCTION*) to connections
	improving netlist quality
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-nov-21 fwb
	fixed property property integer
	multi segment WIRE - OrCad ver 10
	text size per FigGrp
	pick up Instance Ref Designator
   TODO
	remove XTIEs form netlist
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-nov-16 fwb
	removed strndup from edif.y
	added OutPro function to generate a .pro file with libs listed
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-oct-30 fwb 
	fixed CAPSYM.lib - power syms
	better netlist - caps have VCC & GND